<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <PreferenceCategory
    android:title="@string/pref_audio_title"
    android:key="pref_key_audio_settings">
        <CheckBoxPreference
        android:key="pref_music"
        android:title="@string/pref_music"
        android:summary="@string/pref_audio_summ"
        android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="pref_sound"
            android:title="@string/pref_sound"
            android:summary="@string/pref_sound_summ"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>